RESOLVED FIXED27217
Straight quotes should match fancy quotes in in-page search
https://bugs.webkit.org/show_bug.cgi?id=27217
Summary Straight quotes should match fancy quotes in in-page search
Darin Adler
Reported 2009-07-13 08:44:52 PDT
If a web page contains the text "it’s" and I search for "it's" (note the different quotes), the text isn't found. * STEPS TO REPRODUCE 1. Open Safari. 2. Navigate to <http://www.nytimes.com/2009/07/08/world/asia/08china.html?partner=rss&emc=rss&pagewanted=all>. 3. Hit command-F and type "china's" into the search box. Note that there's no match. 4. Hit command-F again and type "china’s" into the search box, this time using option-shift-] (in the US layout) for the quote mark. Note that it now matches. <rdar://problem/7036451>
Attachments
patch (14.54 KB, patch)
2009-07-13 09:57 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2009-07-13 09:57:52 PDT
mitz
Comment 2 2009-07-13 10:02:55 PDT
Comment on attachment 32663 [details] patch Should this also fold hebrewPunctuationGershayim to " and (the still-nonexistent) hebrewPunctuationGeresh to ' ?
Darin Adler
Comment 3 2009-07-13 10:45:05 PDT
(In reply to comment #2) > Should this also fold hebrewPunctuationGershayim to " and (the > still-nonexistent) hebrewPunctuationGeresh to ' ? Sure, I think it could. We could also fold a lot of other characters; for example there are similar quote marks with slightly different vertical positions. I decided to stick with the ones I knew would be a big deal. We can work together to make a longer list.
mitz
Comment 4 2009-07-13 20:12:14 PDT
Comment on attachment 32663 [details] patch r=me if you add a mapping from hebrewPunctuationGershayim to " and from hebrewPunctuationGeresh (U+05F3, still not in CharacterNames.h) to '
Darin Adler
Comment 5 2009-07-14 09:51:50 PDT
Note You need to log in before you can comment on or make changes to this bug.